--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <h2>Live Chart</h2>
           <p>Embed your favorite DEX chart here. Replace the iframe src with your token pair.</p>
           <div class="chart">
-            <iframe class="chart__frame" title="DEX Chart" src="about:blank"></iframe>
+            <iframe class="chart__frame" title="DEX Chart" src="https://dexscreener.com/solana/9mb8fzoukphwihs6kntnly8ps7wanonqfwrokdczze95?embed=1&theme=dark&trades=0&info=0"></iframe>
           </div>
         </div>
       </section>
